Add new banner and minor fixes

--- a/20210418-cli/20210418-cli.md
+++ b/20210418-cli/20210418-cli.md
@@ -1,16 +1,16 @@
 ---
-title: Command-Line Interfaces
-published: false
-description: "My research about command-line interfaces: their structure, syntax and conventions."
+title: Command-Line Interfaces: Structure & Syntax
+published: true
+description: "My research about command-line interfaces: their structure, syntax, and conventions."
 tags: terminal, cli, commandline
-cover_image: https://i.imgur.com/n7ycHE2.png
+cover_image: https://i.imgur.com/6mpS2oq.png
 ---
 
-If you're a developer, you've probably used or read about CLIs (maybe to execute git or npm commands, or in some library's documentation). 
+If you are a developer, chances are you have used or read about CLIs already (maybe to execute git or npm commands or in some library's documentation). 
 
-I work with multiple CLIs every day (docker, dotnet, npm, git, etc.), but I'd never stopped to learn much about their structure or syntax until recently. Reading documentation and examples is usually enough to get by. 
+I work with multiple CLIs every day (docker, dotnet, npm, git, etc.), but I had never stopped to learn much about their structure or syntax until recently. Reading documentation and examples is usually enough to get by. 
 
-However, I'm currently developing my own CLI for a personal project, so I decided to learn more about **CLI design, structure, syntax, and conventions**. I did my research, which I documented in this post.
+However, I'm currently developing my own CLI for a personal project, so I decided to learn more about **CLI design, structure, syntax, and conventions**. I did my research, which I documented and decided to share here in this post.
 
 - [1. Introduction](#1-introduction)
   - [1.1. Structure](#11-structure)
@@ -26,6 +26,7 @@ However, I'm currently developing my own CLI for a personal project, so I decide
   - [5.2. Optional Parameters](#52-optional-parameters)
   - [5.3. Arguments that can receive many values](#53-arguments-that-can-receive-many-values)
   - [5.4. Mutually exclusive arguments](#54-mutually-exclusive-arguments)
+- [Conclusion](#conclusion)
 - [6. References](#6-references)
 
 # 1. Introduction
@@ -201,7 +202,7 @@ npm help <command>
 
 # 5. CLI description syntax conventions
 
-When reading a CLI's documentation or a "man" page, you'll likely come across a particular syntax used to describe commands, their arguments, and options. 
+When reading a CLI's documentation or a "man" page, you'll likely come across a particular **syntax used to describe commands**, their arguments, and options (located often under "Synopsis"). 
 I used to not pay much attention to it (other than trying and figuring out the general anatomy of the command) and going straight to the examples. But after learning about it and how to interpret it, these descriptions have become much more useful to me.
 
 ## 5.1. Required Parameters
@@ -246,7 +247,7 @@ The second way of representing required parameters with many 1 to N values is as
 - `mycli command <myParameter...>`
 - Or: `mycli command myParameter...`
 
-Since we are not using square brackets, it's clear myParameter is required, which indicates it needs **at least one value (1 to N)**.
+Since we are not using square brackets, it's clear `myParameter` is required, which indicates it needs **at least one value (1 to N)**.
 
 Here's an example:
 ```sh
@@ -260,7 +261,7 @@ Some arguments **cannot be used together** in the same command. Their *exclusive
 ```sh
 mycli command [ --option1 | --option2 ]
 ```
-The square brackets tell us we don't have to use any of those options, and the pipe tells us that, if we decide to use them, we can't use them both at the same time. So any of the following are valid:
+The square brackets tell us we *don't have to* use any of those options, and the pipe tells us that, if we decide to use them, we can't use them both at the same time. So any of the following are valid:
 
 - `mycli command`
 - `mycli command --option1`
@@ -276,33 +277,27 @@ git commit [ -a | --interactive | --patch ]
 - The previous statement tells us we can use any of those flags (`-a`, `--interactive` or `--patch` ) but not together
 - Also, the square brackets indicate we can also decide not to use any of them.
 
+Here's what happens when we try to use `-a` and `--patch` together:
 ```sh
 > git commit -a --patch 
 
 fatal: Only one of --include/--only/--all/--interactive/--patch can be used.
 ```
 
-This syntax is often used to represent **aliases**: `git remote [ - v | --verbose ]`. They are both valid individually, but it doesn't make sense to use them simultaneously.
+This syntax is often used to represent **aliases**: `git remote [ - v | --verbose ]`. Both flags are valid individually, but it doesn't make sense to use them simultaneously.
 
-Similarly, there are cases when at least one option must be included. In those cases, we use vertical bars, and we group the parameters using curly brackets or parenthesis, like so:
+Similarly, there are cases when **at least one option must be included**. In those cases, we use vertical bars, and we group the parameters using curly brackets or parentheses, like so:
 - `mycli command { --option1 | --option2 }`
 - Or:  `mycli command ( --option1 | --option2 )`
 
-The curly brackets or parenthesis indicate that at least one option must be included.
+The curly brackets or parentheses indicate that at least one option must be included.
 
-Here's an example from dotnet new :
-```sh
-dotnet new <template> [-lang|--language {"C#"|"F#"|VB}]
-```
-- So, the **square brackets** indicate that passing a `-lang`  or `--language`  is optional
-- The **curly braces** and **pipe** indicate that we must choose between C#, F#, and VB.
-
-Another example from `git remote`:
+Here's an example from `git remote`:
 ```sh
 git remote set-head <name> (-a | --auto | -d | --delete | <branch>)
 ```
 - The **parenthesis** indicates that we must **choose at least one** of those options
-- The **vertical bars** tell us **we can't choose two or more** of them
+- The **pipes** tell us **we can't choose two or more** of them
 
 If we don't use any of the required options, we get this error:
 
@@ -313,6 +308,16 @@ usage: git remote set-head <name> (-a | --auto | -d | --delete | <branch>)
     -a, --auto            set refs/remotes/<name>/HEAD according to remote 
     -d, --delete          delete refs/remotes/<name>/HEAD
 ```
+
+Another example from `dotnet new`:
+```sh
+dotnet new <template> [-lang|--language {"C#"|"F#"|VB}]
+```
+- So, the **square brackets** indicate that passing a `-lang`  or `--language`  is optional
+- The **curly braces** and **pipe** indicate that we must choose between C#, F#, and VB.
+
+# Conclusion
+I know I could have developed my CLI without stopping to learn any of this. After all, there are libraries that would take care of the syntax and interpretation of commands. Nonetheless, I found it extremely interesting, and I have been using this new knowledge a lot after acquiring it. Finding and reading CLIs documentation has become a lot easier, and I learned many tips that will definitely help me develop a better, more intuitive CLI following the conventions and standards described in this article.
 
 # 6. References
 - [Command Line Interface - Codeacademy](https://www.codecademy.com/articles/command-line-interface)
