Add documentation tag

--- a/20210418-cli/20210418-cli.md
+++ b/20210418-cli/20210418-cli.md
@@ -2,7 +2,7 @@
 title: Command-Line Interfaces: Structure & Syntax
 published: true
 description: "My research about command-line interfaces: their structure, syntax, and conventions."
-tags: terminal, cli, commandline
+tags: terminal, cli, commandline, documentation
 cover_image: https://i.imgur.com/6mpS2oq.png
 ---
 
